---
title: ResBack - Dashboard, Analytics and Report Features
---
classDiagram
    direction TB

    class DashboardController {
        <<dashboard and analytics>>
        +index(Request request, ConcernRankingService rankingService) View
    }
    class FeedbackReportController {
        <<PDF report>>
        +__invoke(Request request, ConcernRankingService rankingService) Response
    }
    class FeedbackExportController {
        <<Excel export>>
        +__invoke(Request request) StreamedResponse
    }
    class FeedbackDateRange {
        <<final readonly value object>>
        +CarbonImmutable? start
        +CarbonImmutable? end
        +fromRequest(Request request)$ FeedbackDateRange
        +apply(Builder query, string column) Builder
        +isActive() bool
        +label() string
        +queryParameters() array
    }
    class ConcernRankingService {
        <<concern prioritization>>
        +rank(int? categoryId, string? languageCategory, FeedbackDateRange? dateRange) Collection
        +rebuildCategory(int categoryId) void
        +rebuildAll() void
    }
    class LanguageCategoryService {
        <<language filter labels>>
        +array CATEGORY_LABELS$
        +normalize(array languages) array
    }
    class Feedback {
        <<shared model - selected members>>
        +string content
        +string status
        +int? category_id
        +category() BelongsTo
        +sentimentResult() HasOne
        +scopeReportable(query)
    }

    DashboardController ..> Feedback : queries feedback and analysis
    FeedbackReportController ..> Feedback : loads reportable feedback
    FeedbackExportController ..> Feedback : exports reportable feedback
    DashboardController ..> ConcernRankingService : computes current rankings
    FeedbackReportController ..> ConcernRankingService : computes report rankings
    DashboardController ..> FeedbackDateRange : applies date filters
    FeedbackReportController ..> FeedbackDateRange : applies date filters
    FeedbackExportController ..> FeedbackDateRange : applies date filters
    ConcernRankingService ..> FeedbackDateRange : filters ranking input
    DashboardController ..> LanguageCategoryService : reads filter labels
    FeedbackReportController ..> LanguageCategoryService : validates language filter
    FeedbackExportController ..> LanguageCategoryService : validates language filter

%% Selected dependencies; all controllers extend Controller (not shown).
%% Dashed arrows represent dependencies. Methods/defaults/private helpers omitted
%% only where stated: all public operations shown; optional defaults omitted.
%% FeedbackDateRange::fromRequest declares self; expanded class name shown here.
%% CATEGORY_LABELS is a public class constant, immutable as well as class-scoped.
%% Dashboard also queries Category and SentimentResult directly. Report uses
%% Category::ccis(); report/export eager-load category and sentimentResult.
%% rank() derives fresh collection rows from SentimentResult/Feedback; it does
%% not read ConcernRanking rows. rebuildCategory() persists ConcernRanking rows.
%% PDF generation uses Dompdf; Excel uses PhpSpreadsheet Spreadsheet/Xlsx.
%% These vendor classes are omitted. Excel export does not invoke ranking.
%% Response = Symfony HttpFoundation Response; StreamedResponse = Symfony.
%% Blade/JavaScript implement chart rendering and AJAX pagination.
%% Source: app/Http/Controllers, app/Services, app/Support; inspected 2026-09-24.
